Updating link labels a little bit in my mockup

--- a/mockups/timeline_home.html
+++ b/mockups/timeline_home.html
@@ -42,15 +42,16 @@
                 <ul>
                     <li>Today (10)</li>
                     <li>Yesterday (100)</li>
-                    <li>Mentors</li>
-                    <li>Favourites</li>
+                    <li>Bookmarked posts</li>
+                    <li>Following</li>
+                    <li>Followed by</li>
                 </ul>
 
                 <h2>Tags</h2>
 
                 <ul>
-                    <li>diablo4</li>
-                    <li>starfield</li>
+                    <li>#diablo4</li>
+                    <li>#starfield</li>
                 </ul>
             </div>
 
