Added a few more test requests of me playing with public data on my server

--- a/mockups/timeline_home.html
+++ b/mockups/timeline_home.html
@@ -44,7 +44,7 @@
                     <li>Yesterday (100)</li>
                     <li>Bookmarked posts</li>
                     <li>Following</li>
-                    <li>Followed by</li>
+                    <li>Followers</li>
                 </ul>
 
                 <h2>Tags</h2>
